--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ referrerpolicy="no-referrer"/>
             <button class="hero__button" data-modal-open type="button">Замовити послугу</button>   
         </div>
     </section>
-    <!-- <section class="next section">
+    <section class="next section">
         <div class="container">
                 <h2 class=" next__title visually-hidden">Особливості</h2>
                 <ul class="next__list list">
@@ -179,8 +179,8 @@ referrerpolicy="no-referrer"/>
                 </ul>
         </div>
         
-    </section> -->
-    <!-- <section class="work section">
+    </section> 
+    <section class="work section">
         <div class="container">
                 <h2 class="work__title title">Чим ми займаємося</h2>
                 <ul class="work__list list">
@@ -210,8 +210,8 @@ referrerpolicy="no-referrer"/>
                     </li>
                 </ul>   
         </div>
-    </section> -->
-    <!-- <section class="team section">
+    </section>
+     <section class="team section">
         <div class="container">
                 <h2 class="team__title">Наша команда</h2>
                 <ul class="card list">
@@ -387,8 +387,8 @@ referrerpolicy="no-referrer"/>
                     </li>
                 </ul>
             </div>
-    </section> -->
-    <!-- <section class="clients section">
+    </section> 
+    <section class="clients section">
         <div class="container">
             <h2 class="clients__title ">Постійні клієнти</h2>
             <ul class="clients__list list">
@@ -434,9 +434,9 @@ referrerpolicy="no-referrer"/>
         </div>
 
 
-    </section> -->
+   </section>  
     </main> 
-<!-- <footer class="footer">
+ <footer class="footer">
             <div class="container">
                 <div class="footer__contacts">   
             <a class="footer__logo" href="/">Web<span class="footer__logo-part">Studio</span></a>
@@ -504,7 +504,7 @@ referrerpolicy="no-referrer"/>
 </div>
 </div>
 </footer> -->
-<!-- <div class=" modal-backdrop is-hidden" data-modal>
+ <div class=" modal-backdrop is-hidden" data-modal>
     <div class="modal">
         <div class="close__sign" data-modal-close>
             <svg class="modal__icon" width="18" height="18"><use href="./img/icons.svg#icon-close-black-18dp-2-1"></use>
@@ -565,7 +565,7 @@ referrerpolicy="no-referrer"/>
         </div>
       </div>
   </div>
-    </div> -->
+    </div> 
 <script src="./js/modal.js"></script>
 <script src="./js/menu.js"></script>
 </body>
