--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
     
     </header>   
     <main>
-        <!-- <section class="portfolio section" >
+        <section class="portfolio section" >
             <div class="container">
                 <h1 class="visually-hidden">Портфоліо</h1>
                     <ul class="portfolio__list list">
@@ -362,7 +362,7 @@
     </div>
 </div>
 </div>
-</footer> -->
+</footer>
     
 </body>
 </html>
