--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@ referrerpolicy="no-referrer"/>
     </div>
 </div>
 </div>
-</footer> -->
+</footer> 
  <div class=" modal-backdrop is-hidden" data-modal>
     <div class="modal">
         <div class="close__sign" data-modal-close>
