--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@ referrerpolicy="no-referrer"/>
                     <use href="./img/icons.svg#icon-smartphone-4"></use></svg>+38 096 111 11 11</a>
             </li>
         </ul>
-       <!-- <button type="button" class="open-menu-btn" data-menu-open><svg class="mob-menu-liniya" width="24" height="24">
+       <button type="button" class="open-menu-btn" data-menu-open><svg class="mob-menu-liniya" width="24" height="24">
         <use href="./img/icons.svg#icon-menu_24px1"></use>
-        </svg></button> -->
+        </svg></button>
         <!-- <button type="button" class="open-menu-btn" data-menu-open>
             <svg class="mob-menu-liniya" width="24" height="24">
               <use href="./images/icons.svg#icon-close_24px"></use>
             </svg>
           </button> -->
     </div>
-    <!-- <div class="mob-menu is-hidden" data-menu>
+    <div class="mob-menu is-hidden" data-menu>
         <div class="container">
           <div class="mob-menu__top">
             <button type="button" class="menu-close-btn" data-menu-close>
@@ -123,7 +123,7 @@ referrerpolicy="no-referrer"/>
             </ul>
           </div>
         </div>
-      </div> -->
+      </div>
 
 </header>   
 <main>
@@ -504,7 +504,7 @@ referrerpolicy="no-referrer"/>
 </div>
 </div>
 </footer> 
- <!-- <div class=" modal-backdrop is-hidden" data-modal>
+ <div class=" modal-backdrop is-hidden" data-modal>
     <div class="modal">
         <div class="close__sign" data-modal-close>
             <svg class="modal__icon" width="18" height="18"><use href="./img/icons.svg#icon-close-black-18dp-2-1"></use>
@@ -563,8 +563,8 @@ referrerpolicy="no-referrer"/>
             <button class="btn-send" type="submit">Відправити</button>
           </div>
         </div>
-      </div>  -->
-<!-- <script src="./js/modal.js"></script> -->
-<script src="./js/menu.js"></script>
+      </div> 
+<script src="./js/modal.js"></script>
+<script src="./js/mobile-menu.js"></script>
 </body>
 </html>
