--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@ referrerpolicy="no-referrer"/>
                 <label>
                 </span>Погоджуюся з розсилкою та приймаю<a class="modal-link" href="">Умови договору</a>
             </label>
-            <button class="btn-send" type="submit">Відправити</button>
+            <button class="btn-send" type="submit">Відправити</button></span>
           </div>
         </div>
       </div> 
