--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ referrerpolicy="no-referrer"/>
           </button> -->
     </div>
     <div class="mob-menu is-hidden" data-menu>
-        <div class="container">
+        <!-- <div class="container"> -->
           <div class="mob-menu__top">
             <button type="button" class="menu-close-btn" data-menu-close>
               <svg class="modal-menu-close" width="18" height="18">
@@ -123,7 +123,7 @@ referrerpolicy="no-referrer"/>
             </ul>
           </div>
         </div>
-      </div>
+      <!-- </div> -->
 
 </header>   
 <main>
