--- a/index.html
+++ b/index.html
@@ -186,7 +186,11 @@ referrerpolicy="no-referrer"/>
                 <ul class="work__list list">
                     <li class="work__item">
                         <div class="work__wrapper">
-                        <img class="work__photo" src="./img/about1.jpg" alt="picture about service" width="370">
+                          <img  srcset="
+                          ./img/works/work1.jpg 270w,
+                          ./img/works/work1@2x.jpg 540w"
+                          sizes="(min-width: 1200px) 270px"
+                          src="./img/works/work1.jpg" alt="Десктопні приложення" loading="lazy">
                         <div class="work__description">
                             Десктопні додатки
                         </div>   
@@ -194,7 +198,11 @@ referrerpolicy="no-referrer"/>
                     </li>
                     <li class="work__item">
                         <div class="work__wrapper">
-                        <img class="work__photo" src="./img/about2.jpg" alt="picture about service" width="370">
+                          <img  srcset="
+                          ./img/works/work2.jpg 270w,
+                          ./img/works/work2@2x.jpg 540w"
+                          sizes="(min-width: 1200px) 270px"
+                          src="./img/works/work2.jpg" alt="Мобільні приложення" loading="lazy">
                         <div class="work__description">
                             Мобільні додатки
                         </div>
@@ -202,7 +210,11 @@ referrerpolicy="no-referrer"/>
                     </li>
                     <li class="work__item">
                         <div class="work__wrapper">
-                        <img class="work__photo" src="./img/about3.jpg" alt="picture about service" width="370">
+                          <img  srcset="
+                          ./img/works/work3.jpg 270w,
+                          ./img/works/work3@2x.jpg 540w"
+                          sizes="(min-width: 1200px) 270px"
+                          src="./img/works/work3.jpg" alt="Дизайнерські рішення" loading="lazy">
                         <div class="work__description">
                         Дизайнерські рішення
                         </div>
