--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ referrerpolicy="no-referrer"/>
                         ./img/team/team_4tablet@1x.jpg 354w,
                         ./img/team/team_4phone@1x.jpg 450w,
                         ./img/team/team_4desktop@2x.jpg 540w,
-                        ./img/team/team_4tabletp@2x.jpg 708w,
+                        ./img/team/team_4tablet@2x.jpg 708w,
                         ./img/team/team_4phone@2x.jpg 900w"
 
                         sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
